--- a/todo app/public/index.html
+++ b/todo app/public/index.html
@@ -5,6 +5,7 @@
     <title> to do</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/src/styles/style.css" >
+    <link rel="icon" href="../src/assets/images/favicon.svg" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,15 +13,16 @@
 </head>
 <body>
     <div class="container">
+          
         <div class="background">
             <div id="titulo-background">
+                <i class="fa-solid fa-check"></i>
                 <h1 id="title">To-do List</h1>
-                <div id="contagem">
-                    <span id="quantidade-tarefas"> 0 </span>
-                </div>
-                <div id="contagem-concluidas">
-                    <span id="quantidade-tarefas"> 0 </span>
-                </div>
+                <div class="progress" role="progressbar" aria-label="Basic example"  aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar bg-success progress-bar-striped" style="width: 0%">
+                        <span class="progress-text">0%</span>
+                    </div>
+                  </div>   
             </div>
             <div class="inputTask">
                 <input type="text" id="addTask" placeholder="Adcione a tarefa aqui" required>
@@ -32,10 +34,12 @@
         <div class="background2">
             <div id="title-table">
                 <span id="concluir">✔</span>
-                <span id="tarefa">Tarefa</span>
+                <span id="quantidade-tarefas-concluidas"> 0 </span>
+                <span id="tarefa">Tarefa(s)</span>
                 <span id="excluir">Excluir</span>
             </div>
             <div id="separador"> </div>
+               
         </div>
     </div>
     <script src="/src/app.js"></script>
