--- a/todo app/public/index.html
+++ b/todo app/public/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title> to do</title>
+    <title>To-Do</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/src/styles/style.css" >
     <link rel="icon" href="../src/assets/images/favicon.svg" type="image/svg+xml">
@@ -17,7 +17,7 @@
         <div class="background">
             <div id="titulo-background">
                 <i class="fa-solid fa-check"></i>
-                <h1 id="title">To-do List</h1>
+                <h1 id="title">To-Do List</h1>
                 <div class="progress" role="progressbar" aria-label="Basic example"  aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
                     <div class="progress-bar bg-success progress-bar-striped" style="width: 0%">
                         <span class="progress-text">0%</span>
@@ -36,10 +36,10 @@
                 <span id="concluir">✔</span>
                 <span id="quantidade-tarefas-concluidas"> 0 </span>
                 <span id="tarefa">Tarefa(s)</span>
+                <span id="alterar">Alterar</span>
                 <span id="excluir">Excluir</span>
             </div>
             <div id="separador"> </div>
-               
         </div>
     </div>
     <script src="/src/app.js"></script>
